--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
+{% extends "rango/base.html" %}
 
-<html>
-    <head>
-        <title>Range</title>
-    </head>
-
-    <body>
+{% block body_block %}
         {% if user.is_authenticated %}
         <h1>Rango says... hello {{ user.username }}!</h1>
         {% else %}
@@ -21,16 +16,4 @@
         {% else %}
             <strong>There are no categories present.</strong>
         {% endif %}
-
-        {% if user.is_authenticated %}
-        <a href="/rango/restricted/">Restricted Page</a><br/>
-        <a href="/rango/logout/">Logout</a><br/>
-        {% else %}
-        <a href="/rango/register/">Register Here</a> <br/>
-        <a href="/rango/login/">Login</a><br/>
-        {% endif %}
-
-        <a href="/rango/about">About</a><br/>
-        <a href="/rango/add_category/">Add a New Category</a><br/>
-    </body>
-</html>
+{% endblock %}
